--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -229,10 +229,14 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="shortdesc_duration">Widerstandsdauer</string>
     <string name="HERO_EFFECT_RES_STRENGTH">Erhöht die Stärke der Widerstände</string>
     <string name="HERO_EFFECT_RES_DURATION">Erhöht die Wirkungsdauer der Widerstände</string>
-    <string name="message_is_on_leave">%s ist derzeit im Urlaub.\n</string>
+    <string name="message_is_on_leave">%s ist derzeit im Urlaub.</string>
     <string name="instr_leave">"Einem dieser Helden musst du einen Urlaub von %d Leveln Dauer gewähren. In dieser Zeit steht er oder sie nicht zur Verfügung.\n "</string>
     <string name="heroes_on_leave_0">Kein Held ist beurlaubt.</string>
     <string name="heroes_on_leave_1">Beurlaubt:</string>
     <string name="heroes_on_leave_2">Beurlaubte Helden:</string>
     <string name="shannon">"Claude Elwood Shannon gilt als Begründer der Informationstheorie und einer der Väter des Informationszeitalters. Eine seiner wesentlichen Leistungen besteht darin, die mathematische Theorie der Booleschen Algebra auf reale Schaltkreise zu übertragen, und dadurch die modernen digitalen Computer zu ermöglichen. \n\nShannon entwickelte das Konzept von Information und Entropie in Nachrichten, machte wichtige Beiträge zur Kryptographie und beschäftigte sich mit Künstlicher Intelligenz. Unter anderem beschrieb er ein Programm zum Schachspielen und konstruierte eine mechanische Maus, die selbstlernend ihren Weg durch ein Labyrinth finden konnte.  "</string>
+    <string name="shortdesc_coin_strength">Stärke der Coins</string>
+    <string name="HERO_EFFECT_COINSTRENGTH">verringert die Stärke der Crypto-Coins</string>
+    <string name="boole">Die Leistung von George Boole Jr. liegt darin, dass er die Begriffe der Logik formalisiert und dadurch zu einem Teil der Mathematik gemacht hat. Die Boolesche Algebra ist Grundlage für die interne Funktionsweise aller modernen Computer.\n\nBoole war der Sohn eines Schusters und hat nie eine Schule außer der Grundschule besucht. Mathematik, Latein und Griechisch, Französisch und Deutsch brachte er sich selber bei.</string>
+    <string name="diffie">Zusammen mit Martin Hellmann entwickelte Bailey Whitfield Diffie den nach den beiden benannten DH-Schlüsselaustausch zwischen zwei Parteien und schuf damit eine wesentliche Voraussetzung für sichere Verbindungen im Internet.\n\nDiffie beschäftigt sich auch mit gesellschaftlichen Fragen der Kryptographie und ist ein überzeugter Verfechter des Rechts auf Privatsphäre.</string>
 </resources>
