better short descriptions

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -113,40 +113,40 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="link_wiki">Wiki</string>
     <string name="button_exit">Ende</string>
     <string name="button_retry">Erneut spielen</string>
-    <string name="shortdesc_SUB">Geschw. der SUB-Schaltungen</string>
+    <string name="shortdesc_SUB">SUB-Geschw.</string>
     <string name="shortdesc_startinfo">Info bei Start</string>
-    <string name="shortdesc_SHR">Geschw. SHR-Schaltungen</string>
-    <string name="shortdesc_ACC">Geschw. ACC-Schaltungen</string>
-    <string name="shortdesc_MEM">Geschw. MEM-Schaltungen</string>
-    <string name="shortdesc_heat">Wärmeerzeugung</string>
-    <string name="shortdesc_upgrade">Kosten für Verbesserung</string>
-    <string name="shortdesc_lives">Extra-Lebenspt.</string>
-    <string name="shortdesc_frequency">Frequenz der Angreifer</string>
-    <string name="shortdesc_att_speed">Geschw. der Angreifer</string>
-    <string name="shortdesc_att_strength">Stärke der Angreifer</string>
+    <string name="shortdesc_SHR">SHR-Geschw.</string>
+    <string name="shortdesc_ACC">ACC-Geschw.</string>
+    <string name="shortdesc_MEM">MEM-Geschw.</string>
+    <string name="shortdesc_heat">Erzeugte Wärme</string>
+    <string name="shortdesc_upgrade">Verbesserungskosten</string>
+    <string name="shortdesc_lives">Extra Lebenspt.</string>
+    <string name="shortdesc_frequency">Gegnerhäufigkeit</string>
+    <string name="shortdesc_att_speed">Gegnergeschw.</string>
+    <string name="shortdesc_att_strength">Gegnerstärke</string>
     <string name="shortdesc_info_gain">Informationsgewinn</string>
-    <string name="shortdesc_heat_conversion">Wärme-Umwandlung</string>
-    <string name="shortdesc_double_chance">Doppeleffekt-Chance %s</string>
-    <string name="shortdesc_range">Reichweite %s-Schaltungen</string>
-    <string name="shortdesc_refund">Erstattung bei Verkauf</string>
-    <string name="shortdesc_max_hero_upgrade">max. Helden-Stärke</string>
+    <string name="shortdesc_heat_conversion">Wärmeumwandlung</string>
+    <string name="shortdesc_double_chance">Doppeltrefferchance %s</string>
+    <string name="shortdesc_range">%s-Reichweite</string>
+    <string name="shortdesc_refund">Verkaufspreis</string>
+    <string name="shortdesc_max_hero_upgrade">max. Heldenstufe</string>
     <string name="upgrade_format">%s  [Kosten: %d]</string>
     <string name="toast_next_stage">Stufe %d</string>
     <string name="toast_stage_cleared">Stufe geschafft</string>
     <string name="instr_12">Zwei weitere Schaltungarten: ADD (engl. add) und SHL (engl. shift left).\n\nDiese tun das Gegenteil von SUB und SHR: Sie erhöhen um eins bzw. schieben die Bits nach links.\n\nDas ist natürlich unerwünscht, denn es vergrößert die Zahlen. Für diese Schaltungen bedeutet eine ‚Verbesserung‘, daß sie schwächer werden oder ganz verschwinden.</string>
     <string name="instr_13">"Beachte, daß Cryptomünzen weder von ACC- noch von MEM-Schaltungen beeinflußt werden.\n "</string>
-    <string name="HERO_EFFECT_CHIPSPEED">verringert die Abklingzeit aller %s Schaltungen</string>
-    <string name="HERO_EFFECT_HEAT">verringert die Wärmeerzeugung</string>
-    <string name="HERO_EFFECT_STARTINFO">startet alle Stufen mit mehr Information</string>
-    <string name="HERO_EFFECT_UPGRADECOST">verringert die Kosten für Verbesserungen</string>
-    <string name="HERO_EFFECT_LIVES">gewährt zusätzliche Lebenspunkte</string>
-    <string name="HERO_EFFECT_FREQUENCY">verringert die Frequenz der Angreifer</string>
-    <string name="HERO_EFFECT_INFOOVERTIME">zusätzlicher Informationsgewinn pro Zeit</string>
-    <string name="HERO_EFFECT_ATTSPEED">verringert die Geschwindigkeit der Angreifer</string>
-    <string name="HERO_EFFECT_ATTSTRENGTH">verringert die Stärke der Angreifer</string>
-    <string name="HERO_EFFECT_MAXHEROUPGRADE">erhöht die maximale Stufe der anderen Helden</string>
-    <string name="HERO_EFFECT_REFUNDPRICE">höhere Erstattung beim Verkauf von Schaltungen</string>
-    <string name="HERO_EFFECT_RANGE">erhöht die Reichweite der %s Schaltungen</string>
+    <string name="HERO_EFFECT_CHIPSPEED">Verringert die Abklingzeit aller %s Schaltungen</string>
+    <string name="HERO_EFFECT_HEAT">Verringert die Wärmeerzeugung</string>
+    <string name="HERO_EFFECT_STARTINFO">Startet alle Stufen mit mehr Information</string>
+    <string name="HERO_EFFECT_UPGRADECOST">Verringert die Kosten für Verbesserungen</string>
+    <string name="HERO_EFFECT_LIVES">Gewährt zusätzliche Lebenspunkte</string>
+    <string name="HERO_EFFECT_FREQUENCY">Verringert die Frequenz der Angreifer</string>
+    <string name="HERO_EFFECT_INFOOVERTIME">Zusätzlicher Informationsgewinn pro Zeit</string>
+    <string name="HERO_EFFECT_ATTSPEED">Verringert die Geschwindigkeit der Angreifer</string>
+    <string name="HERO_EFFECT_ATTSTRENGTH">Verringert die Stärke der Angreifer</string>
+    <string name="HERO_EFFECT_MAXHEROUPGRADE">Erhöht die maximale Stufe der anderen Helden</string>
+    <string name="HERO_EFFECT_REFUNDPRICE">Höhere Erstattung beim Verkauf von Schaltungen</string>
+    <string name="HERO_EFFECT_RANGE">Erhöht die Reichweite der %s Schaltungen</string>
     <string name="HERO_EFFECT_CONVERT_HEAT">Wandelt einen Teil der von Widerständen erzeugten Wärme in Information um</string>
     <string name="HERO_EFFECT_CHANCE_DOUBLE">Gibt %s Schaltungen eine Chance auf doppelten Effekt</string>
     <string name="toast_loading">Lade Daten …</string>
