--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="pref_filename" translatable="false">prefs.xml</string>
     <string name="pref_filename_level_structure" translatable="false">structure</string>
     <string name="pref_filename_savegames" translatable="false">saves</string>
+    <string name="pref_filename_state" translatable="false">state</string>
     <string name="button_resume">Resume game</string>
     <string name="button_playlevel">Play stage</string>
     <string name="button_nextlevel">Play next stage</string>
