--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,8 +223,9 @@ The programming language Pascal is named after him."</string>
     <string name="shortdesc_reduce_removal">Chip removal cost</string>
     <string name="shortdesc_enable_mem_upgrade">MEM max. level</string>
     <string name="upgrade_format">%s  [cost: %d]</string>
-    <string name="toast_next_stage">Stage %d</string>
+    <string name="stage_number">Stage %d</string>
     <string name="toast_stage_cleared">Stage cleared</string>
+    <string name="toast_enter_stage">Stage %d</string>
     <string name="HERO_EFFECT_CHIPSPEED">Decreases cooldown time of all %s chips</string>
     <string name="HERO_EFFECT_HEAT">Reduces the amount of generated heat</string>
     <string name="HERO_EFFECT_STARTINFO">Increases information at start of level</string>
@@ -315,4 +316,4 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="shannon">Claude Elwood Shannon is considered the founder of information theory and one of the fathers of the information age. One of his major achievements was to transfer the mathematical theory of Boolean algebra to real circuits, thereby making modern digital computers possible. \n\nShannon developed the concept of information and entropy in messages, made important contributions to cryptography, and worked on artificial intelligence. Among other things, he described a programme for playing chess and constructed a mechanical mouse that could find its own way through a maze.  \n</string>
     <string name="boole">The achievement of George Boole Jr. lies in the fact that he formalised the concepts of logic and thus made them part of mathematics. Boolean algebra is the basis for the internal functioning of all modern computers.\n\nBoole was the son of a shoemaker and never attended any school other than primary school. He taught himself maths, Latin and Greek, French and German.</string>
     <string name="diffie">Together with Martin Hellmann, Bailey Whitfield Diffie developed the DH key exchange between two parties named after the two of them. They thus created an essential prerequisite for secure connections over the Internet.\n\nDiffie is also concerned about social issues of cryptography. He is a staunch advocate of the right to privacy.</string>
-    </resources>
+</resources>
