--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,9 +265,9 @@ Furthermore, some slots are already taken by unwanted chips you'll have to deal 
     <string name="series_completed_message_1">" "</string>
     <string name="series_completed_message_4">" "</string>
     <string name="query_quit">Do you want to quit the current stage?</string>
-    <string name="return_to_main_menu">Return to main menu</string>
+    <string name="button_return_to_main_menu">Return to main menu</string>
     <string name="continue_game">Continue playing</string>
-    <string name="replay">Replay stage</string>
+    <string name="buttton_replay">Replay stage</string>
     <string name="settings_use_large_buttons">Use large objects</string>
     <string name="settings_show_framerate">Show frame rate</string>
     <string name="button_back">Close</string>
