--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -259,4 +259,5 @@ Turing wurde aufgrund seiner Homosexualität massiv diskriminiert. Er starb 1954
     <string name="coins_plural">%d Coins</string>
     <string name="coins_none">keinen Coin</string>
     <string name="settings_disable_purchase_dialog">Dialog „Kaufen von Leben“ deaktivieren</string>
+    <string name="version">Version</string>
 </resources>
