--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -66,7 +66,7 @@
     <string name="chappe">Avec ses quatre frères Ignace, Pierre François, René et Abraham, Claude Chappe a développé le télégraphe optique. Son « tachygraphe » fut le premier système permettant de transmettre rapidement des informations sur de grandes distances, et donc le précurseur de toutes les communications modernes. Vers 1830, le système de sémaphores de Chappe reliait Paris à de nombreuses villes importantes en France et en Europe.\n</string>
     <string name="hamilton">En tant que jeune programmeuse, Margaret Elaine Hamilton a travaillé sur des projets militaires. Au milieu des années 1960, elle a rejoint le projet lunaire de la NASA et est rapidement devenue directrice du département de logiciels. Elle et son équipe étaient responsables de la programmation et des tests de l\'ordinateur de navigation à bord du vaisseau spatial et du module lunaire, la vie des astronautes dépendant de la fiabilité absolue des programmes.\n\nHamilton a inventé le terme de « software engineering ». Elle existe également en figurine Lego.\n</string>
     <string name="settings_title">Réglages</string>
-    <string name="about_title">A propos de ...</string>
+    <string name="about_title">A propos de…</string>
     <string name="about_license">"Ce jeu est open source. Visitez <a href="https://github.com/ochadenas/cpudefense">github.com/ochadenas/cpudefense</a> pour plus d\'informations.\n\nLes portraits des héros de l\'ère de l\'information sont pour la plupart issus d\'œuvres du domaine public.\n\nPhotos originales :\n  Alex Handy (CC BY-SA 2.0)\n  Jacob Appelbaum (CC BY-SA 2.5)\n  Konrad Jacobs (CC BY-SA 2.0 de)\n  Rama (CC BY-SA 2.0 fr)\n  Shervinafshar (CC BY-SA 3.0)\n  Tony Bove (CC BY 3.0)\n  Wolfgang Hunscher (CC BY-SA 3.0)\n  Silvano de Gennaro (courtesy of the author)\n  Clermont Auvergne Métropole (CC BY-SA 4.0)\n  Jean-Frédéric (CC BY 2.0)\n  Tekniska Museet (CC BY 2.0)\n  The Royal Society (CC BY-SA 4.0)\n  Tanyakh (CC BY-SA 4.0)\n    \nPlatines d\'ordinateur :\n  Autopilot (CC BY-SA 4.0)\n  Bill Bertram (CC-BY 2.0)\n  Oliver Chadenas (CC BY-SA 3.0)\n  Smial (FAL)\n\nToutes autres images :\n  Oliver Chadenas (CC BY-SA 3.0)\n  "</string>
     <string name="about_info_title">Info</string>
     <string name="about_info_text">Des informations complémentaires et des astuces pour jouer se trouvent en ligne dans le wiki du jeu.</string>
@@ -108,7 +108,7 @@
     <string name="HERO_EFFECT_RANGE">augmente la portée des puces %s</string>
     <string name="HERO_EFFECT_CONVERT_HEAT">Convertit une partie de la chaleur des résistances en information</string>
     <string name="HERO_EFFECT_CHANCE_DOUBLE">Donne aux puces %s une chance de double effet</string>
-    <string name="toast_loading">Chargement ...</string>
+    <string name="toast_loading">Chargement…</string>
     <string name="name_series_1">Normal</string>
     <string name="name_series_2">Turbo</string>
     <string name="message_series_unavailable">Complétez tous les niveaux en mode normal d\'abord.</string>
@@ -136,7 +136,7 @@
     <string name="button_back">Fermer</string>
     <string name="button_info">Info</string>
     <string name="button_releasenotes">Release Notes</string>
-    <string name="text_about">A propos de ...</string>
+    <string name="text_about">A propos de…</string>
     <string name="instr_endless">Vous avez réussi tous les niveaux et gagné le jeu !\n\nSi vous le souhaitez, vous pouvez continuer en mode « endless » (sans fin), avec des circuits générés aléatoirement et de plus en plus difficiles. Vous commencerez cette série sans héros, et vous ne pourrez pas utiliser les écus collectées jusqu\'à présent. \n\nJusqu\'où irez-vous ?\n\n\n\n</string>
     <string name="message_endless_unavailable">Disponible après avoir terminé tous les niveaux précédents.</string>
     <string name="instr_did_you_know">Le saviez-vous ?</string>
